--- a/localConfig.json
+++ b/localConfig.json
@@ -5,6 +5,6 @@
     "Updated": 0,
     "SendCountryInfo": 1,
     "lastInfo": "Hello, you are now an Exorder!",
-    "lastUpdate": "1.3.4.3"
+    "lastUpdate": "1.3.4.3a"
   }
 }
