--- a/localConfig.json
+++ b/localConfig.json
@@ -4,7 +4,7 @@
     "MainERCAddress": "",
     "Updated": 0,
     "SendCountryInfo": 1,
-    "lastInfo": "Hello, you are now an Exorder!",
-    "lastUpdate": "1.3.4.3b"
+    "lastInfo": "We are experimenting with storage-optimized smart contracts, stay tuned. Network is working, but in slow mode. Thanks everyone :) - Exorde Labs 23/12/22",
+    "lastUpdate": "v1.3.5b"
   }
 }
