--- a/localConfig.json
+++ b/localConfig.json
@@ -4,7 +4,7 @@
     "MainERCAddress": "",
     "Updated": 0,
     "SendCountryInfo": 1,
-    "lastInfo": "We are experimenting with storage-optimized smart contracts, stay tuned. Network is working, but in slow mode. Thanks everyone :) - Exorde Labs 23/12/22",
+    "lastInfo": "Optimizations are ongoing. Interruptions are normal. Thanks for your support, enthusiasm, and crazy love. - Exorde Labs 27/12/22",
     "lastUpdate": "v1.3.5b"
   }
 }
